[gd_scene load_steps=17 format=3 uid="uid://30hqls1leku4"]

[ext_resource type="Script" uid="uid://63jufnskv1p5" path="res://Player/player.gd" id="1_l8h54"]
[ext_resource type="AudioStream" uid="uid://sswvqgc2pxqv" path="res://assets/SFX - Death Explosion.ogg" id="2_4ntmi"]
[ext_resource type="AudioStream" uid="uid://dxoehsuhf5v1i" path="res://assets/SFX - Success.ogg" id="3_btcbx"]
[ext_resource type="AudioStream" uid="uid://4688dtwhss2d" path="res://assets/SFX - Main engine thrust.ogg" id="4_gwnis"]
[ext_resource type="PackedScene" uid="uid://utljkmfy2jgu" path="res://Particals/booster_particles.tscn" id="5_k53q1"]
[ext_resource type="PackedScene" uid="uid://dcecb8hw7dbrv" path="res://Particals/explosion_particles.tscn" id="6_fhl08"]
[ext_resource type="PackedScene" uid="uid://jfwajmrh6ca7" path="res://Particals/success_particles.tscn" id="7_vtle1"]

[sub_resource type="CylinderMesh" id="CylinderMesh_btcbx"]

[sub_resource type="CylinderMesh" id="CylinderMesh_vtle1"]
top_radius = 0.2
bottom_radius = 0.2
height = 1.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_vtle1"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_od3ui"]
material = SubResource("StandardMaterial3D_vtle1")
top_radius = 0.0
bottom_radius = 0.2
height = 0.5

[sub_resource type="CylinderMesh" id="CylinderMesh_00tjw"]
top_radius = 0.2
bottom_radius = 0.2
height = 1.5

[sub_resource type="CylinderMesh" id="CylinderMesh_x3vf3"]
top_radius = 0.2
bottom_radius = 0.2
height = 1.5

[sub_resource type="BoxMesh" id="BoxMesh_apopc"]
size = Vector3(0.2, 0.7, 0.2)

[sub_resource type="BoxMesh" id="BoxMesh_5htga"]
size = Vector3(0.2, 0.7, 0.2)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_l8h54"]

[node name="Player" type="RigidBody3D"]
axis_lock_linear_z = true
axis_lock_angular_x = true
axis_lock_angular_y = true
contact_monitor = true
max_contacts_reported = 10
linear_damp = 1.0
angular_damp = 3.0
script = ExtResource("1_l8h54")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("CylinderMesh_btcbx")

[node name="body" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.23093459, 0)
mesh = SubResource("CylinderMesh_vtle1")

[node name="cockpit" type="MeshInstance3D" parent="body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9936979, 0)
mesh = SubResource("CylinderMesh_od3ui")
skeleton = NodePath("../..")

[node name="body2" type="MeshInstance3D" parent="body"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0.38189238, -0.38578084, 0)
mesh = SubResource("CylinderMesh_00tjw")
skeleton = NodePath("../..")

[node name="cockpit" type="MeshInstance3D" parent="body/body2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9922185, 0)
mesh = SubResource("CylinderMesh_od3ui")
skeleton = NodePath("../../..")

[node name="body3" type="MeshInstance3D" parent="body"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -0.37003, -0.38578084, 0)
mesh = SubResource("CylinderMesh_x3vf3")
skeleton = NodePath("../..")

[node name="cockpit" type="MeshInstance3D" parent="body/body3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9922185, 0)
mesh = SubResource("CylinderMesh_od3ui")
skeleton = NodePath("../../..")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.24700376, -0.4006013, 0)
mesh = SubResource("BoxMesh_apopc")
skeleton = NodePath("../..")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.247, -0.40106544, 0)
mesh = SubResource("BoxMesh_5htga")
skeleton = NodePath("../MeshInstance3D2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CylinderShape3D_l8h54")

[node name="ExplosionAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_4ntmi")

[node name="SuccessAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_btcbx")

[node name="RocketAudio" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_gwnis")

[node name="MainBooster" parent="." instance=ExtResource("5_k53q1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
emitting = false

[node name="RightBooster" parent="." instance=ExtResource("5_k53q1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.375, -1, 0)
emitting = false

[node name="LeftBooster" parent="." instance=ExtResource("5_k53q1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.375, -1, 0)
emitting = false

[node name="ExplosionParticles" parent="." instance=ExtResource("6_fhl08")]

[node name="SuccessParticles" parent="." instance=ExtResource("7_vtle1")]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
